# hdd_standby-rs

./: Cargo.toml  README.md  search-index.js
hdd_standby/: enum.Error.html  enum.PowerState.html  fn.get_power_state.html  index.html  sidebar-items.js
implementors/core/fmt/: trait.Debug.js
src/: cli.rs  lib.rs
src/hdd_standby/src/: lib.rs.html
